bug 762876 - fix default orientation of role=scrollbar, and ensure only one of states horizontal or vertical is set r=davidb